- Added service and factory - Smaller renaming actions (e.g. refresh)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
                     <div class="col-md-1 col-md-offset-6">
-                        <button class="btn btn-info" ng-click="loadData()">Refresh</button>
+                        <button class="btn btn-info" ng-click="refreshData()">Refresh</button>
                     </div>
                   <label></label>
 
